# codex-vault-pipeline

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: data-model.md  environment.md  incremental-ingest.md  indexing-and-benchmarks.md  pipeline-overview.md  security-policy.md  taxonomy.md
examples/: batch-5source-validation.yaml  batch-full43-reingest.yaml
examples/batches/: deep-research-osint.yaml
reports/: phase-05e2-pipeline-v2-architecture-audit.md  phase-05e2-v2-pipeline-and-vault-architecture-audit.md  phase-05f2b-codex-vault-graph-schema.md  phase-05f2c-graph-builder.md  phase-05g0-mass-ingest-readiness-audit.md  phase-05g1-graph-cli.md
schemas/: acquisition-run.schema.yaml  bundle.schema.yaml  domain-record.schema.yaml  migration-report.schema.yaml  relation.schema.yaml  source.schema.yaml  vocab-artifact-role.yaml  vocab-authority-level.yaml  vocab-knowledge-status.yaml  vocab-lifecycle-status.yaml  vocab-primary-domain.yaml  vocab-project-use-cases.yaml  vocab-target-runtimes.yaml
scripts/: _refactor_round2.py  _refactor_tools.py  bootstrap_env.sh  codex-vault-benchmark  codex-vault-build-indexes  codex-vault-ingest  codex-vault-validate  query_units_chat.py  run_5source_unit_extraction.py
src/codex_vault_pipeline/: __init__.py  __main__.py  cli.py  paths.py
src/codex_vault_pipeline/extractors/: __init__.py  tech_profile.py  tech_profile_backfill_report.py
src/codex_vault_pipeline/graph/: __init__.py  graph_config_writer.py  hub_generator.py  note_source_matcher.py  projection.py  source_card_generator.py  source_reader.py  wikilink_planner.py
src/codex_vault_pipeline/index/: __init__.py  sqlite_fts.py
src/codex_vault_pipeline/ingest/: __init__.py  batch.py  checkpoints.py  occurrence_identity.py  reports.py  source_runner.py  source_validators.py  unit_extractor.py  unit_validator.py
src/codex_vault_pipeline/legacy/: __init__.py  _phase3_artifact_manifest.py  _phase3_completion.py  _phase4_completion.py  benchmark.py  (+26 more)
tests/: __init__.py  test_batch_runner.py  test_checkpoints.py  test_cli_env_paths.py  test_file_policy.py  test_graph_builder.py  test_graph_config_writer.py  test_graph_hub_generator.py  test_graph_note_source_matcher.py  test_graph_projection.py  test_graph_schema.py  test_graph_source_card_generator.py  test_graph_source_reader.py  test_graph_wikilink_planner.py  test_ingest_cli.py  test_ingest_reports.py  test_n8n_workflow_catalog.py  test_occurrence_identity.py  test_paths.py  test_query_units_chat.py  test_query_units_cli.py  test_smoke.py  test_source_runner.py  test_source_validators.py  test_sqlite_fts.py  test_unit_extractor.py  test_unit_validator.py  test_v2.py
(+28 files in other folders)
